ATLAS-5338: Use Java 8 compatible List helpers in TrinoExtractorITSupport
Replace List.of() with Arrays.asList() so test code compiles on JDK 8
(CI docker-build matrix).